Nato phonetic converter

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 :root {
   --color-dark-black: #131010;
-  --color-dark-brown: #543a14;
-  --color-dark-beige: #f0bb78;
+  --color-dark-brown: #221503;
+  --color-dark-beige: #eb911c;
   --color-light-beige: #fff0dc;
-  --color-white: #ffff;
+  --color-white: #ffffffea;
   --primary-font: "Nunito", sans-serif;
   --secondary-font: "Press Start 2P", system-ui;
 }
