--- a/src/Game.css
+++ b/src/Game.css
@@ -60,7 +60,8 @@
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    min-height: 100vh;
+    min-height: 100%;
+    padding-inline: 5rem;
   }
   .value P{
     font-size: 2rem;
